--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@kobalte/core": "catalog:",
+    "@monaco-editor/loader": "1.7.0",
     "@opencode-ai/sdk": "workspace:*",
     "@opencode-ai/ui": "workspace:*",
     "@opencode-ai/util": "workspace:*",
@@ -51,6 +52,7 @@
     "luxon": "catalog:",
     "marked": "catalog:",
     "marked-shiki": "catalog:",
+    "monaco-editor": "0.55.1",
     "remeda": "catalog:",
     "shiki": "catalog:",
     "solid-js": "catalog:",
