fix: use printf instead of echo to avoid trailing newline in signing key

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -179,7 +179,7 @@ jobs:
 
       - name: Setup Tauri signing key
         run: |
-          echo "${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}" > $RUNNER_TEMP/tauri-signing-key.key
+          printf '%s' "${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}" > $RUNNER_TEMP/tauri-signing-key.key
 
       - name: Build and upload artifacts
         timeout-minutes: 40
