fix: trigger publish on main push instead of dev

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,7 @@ run-name: "${{ format('release {0}', inputs.bump) }}"
 on:
   push:
     branches:
-      - dev
-      - snapshot-*
+      - main
   workflow_dispatch:
     inputs:
       bump:
