--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "typecheck": "tsgo -b",
     "predev": "bun ./scripts/predev.ts",
-    "dev": "vite",
+    "dev": "bunx @react-grab/claude-code@latest && vite",
     "build": "bun run typecheck && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
